--- a/Notebooks/GraphCombined.ipynb
+++ b/Notebooks/GraphCombined.ipynb
@@ -244,11 +244,11 @@
         "  '''\n",
         "\n",
         "  def __init__(self, url=None):\n",
-        "    self.consumer_key = 'a8OXOJWynh9rdupWIz4u4yXiX'\n",
-        "    self.consumer_secret = 'xxvtVPrNX9e3ht5tJGF5r8RzSJpUIDrE7nBFdNYi5huIxmLoac'\n",
-        "    self.access_token_key = '1437716485263093764-XgwefPBHn3W0pTToNrx9LpXDHaAixE'\n",
-        "    self.access_token_secret = 'D7FVKXCEQ2ueCJC6oQSjwpAiLcrIqs2rmqjYfIoN4tcmq'\n",
-        "    self.bearer_token = 'AAAAAAAAAAAAAAAAAAAAAP7nTgEAAAAAV2izN%2BsbYebB%2FC3HfrfrbX7JEeg%3DAckELjH4YxdSdenfhODgmILBB4HVU332D4lRTOwZo1zOfY39XH'\n",
+        "    self.consumer_key = 'xxxxxxx'\n",
+        "    self.consumer_secret = 'xxxxxxx'\n",
+        "    self.access_token_key = 'xxxxxxx-xxxxxxx'\n",
+        "    self.access_token_secret = 'xxxxxxx'\n",
+        "    self.bearer_token = 'xxxxxxxxxxxxxxxxxx'\n",
         "    auth = tweepy.OAuthHandler(self.consumer_key, self.consumer_secret)\n",
         "    auth.set_access_token(self.access_token_key, self.access_token_secret)\n",
         "    self.api = tweepy.API(auth, wait_on_rate_limit=True)\n",
@@ -515,19 +515,15 @@
         "\n",
         "      brief_dict = {}\n",
         "\n",
-        "      #cookie = 'guest_id_marketing=v1:166448182424211327; guest_id_ads=v1:166448182424211327; gt=1575577088194592768; _ga=GA1.2.1322751509.1664481826; _gid=GA1.2.1850438018.1664481826; kdt=Oye4T2yX5clOFZIFPgFdgUVY7UoZ1AhccanFIF3L; att=1-sCtcJBPEjceE3r146kgYEkq2DbshYItu3clP80MN; dnt=1; personalization_id=\"v1_4oByeCnZoFX0jguGeGEyug==\"; guest_id=v1:166448424814529225; auth_token=54bda34a3b02648f06316abb0c5333a46b737984; ct0=c7ae7274dc75e5a6f63f05e0b0eceedd1a34cb868dcda39046cce5e1c23872e655d2bee448ecafb8c25d71709c8d80856edeb1af1725c161f51c4838ba3bd1f4acfad12454ffcebb7184bb6b9ea740b7; twid=u=1575587860031635456; _twitter_sess=BAh7CSIKZmxhc2hJQzonQWN0aW9uQ29udHJvbGxlcjo6Rmxhc2g6OkZsYXNo%0ASGFzaHsABjoKQHVzZWR7ADoHaWQiJTAyNjc4ZTMxYjc3ZjY5Mjc5OWMwMWYy%0AMGQ5M2M1ZTg0Og9jcmVhdGVkX2F0bCsIAXMDi4MBOgxjc3JmX2lkIiU2MWQy%0AZDQwZmY4ZjFmYzRlODU4MWNmYjhhOTAwYjM0Mg%3D%3D--85c265db37af7c18f9c75df21c92dfc8911a0666; external_referer=padhuUp37zj9xuUOXCNFvJEaPb7vKkpn|0|8e8t2xd8A2w=' \n",
         "      #Here Paste Your Twitter Cookie\n",
-        "      cookie = 'guest_id_marketing=v1:166448182424211327; guest_id_ads=v1:166448182424211327; gt=1575577088194592768; _ga=GA1.2.1322751509.1664481826; _gid=GA1.2.1850438018.1664481826; kdt=Oye4T2yX5clOFZIFPgFdgUVY7UoZ1AhccanFIF3L; att=1-sCtcJBPEjceE3r146kgYEkq2DbshYItu3clP80MN; dnt=1; personalization_id=\"v1_4oByeCnZoFX0jguGeGEyug==\"; guest_id=v1:166448424814529225; auth_token=54bda34a3b02648f06316abb0c5333a46b737984; ct0=c7ae7274dc75e5a6f63f05e0b0eceedd1a34cb868dcda39046cce5e1c23872e655d2bee448ecafb8c25d71709c8d80856edeb1af1725c161f51c4838ba3bd1f4acfad12454ffcebb7184bb6b9ea740b7; twid=u=1575587860031635456; _twitter_sess=BAh7CSIKZmxhc2hJQzonQWN0aW9uQ29udHJvbGxlcjo6Rmxhc2g6OkZsYXNo%0ASGFzaHsABjoKQHVzZWR7ADoHaWQiJTAyNjc4ZTMxYjc3ZjY5Mjc5OWMwMWYy%0AMGQ5M2M1ZTg0Og9jcmVhdGVkX2F0bCsIAXMDi4MBOgxjc3JmX2lkIiU2MWQy%0AZDQwZmY4ZjFmYzRlODU4MWNmYjhhOTAwYjM0Mg%3D%3D--85c265db37af7c18f9c75df21c92dfc8911a0666; external_referer=padhuUp37zj9xuUOXCNFvJEaPb7vKkpn|0|8e8t2xd8A2w=; _gat=1'\n",
+        "      cookie = 'xxxxxxx'\n",
         "\n",
-        "      #authorization = 'Bearer AAAAAAAAAAAAAAAAAAAAANRILgAAAAAAnNwIzUejRCOuH5E6I8xnZz4puTs=1Zv7ttfk8LF81IUq16cHjhLTvJu4FA33AGWWjCpTnA' \n",
         "      #Here Paste your Authoriaztion Token\n",
-        "      authorization = 'Bearer AAAAAAAAAAAAAAAAAAAAANRILgAAAAAAnNwIzUejRCOuH5E6I8xnZz4puTs=1Zv7ttfk8LF81IUq16cHjhLTvJu4FA33AGWWjCpTnA'\n",
-        "\n",
-        "      #csrf_token = 'c7ae7274dc75e5a6f63f05e0b0eceedd1a34cb868dcda39046cce5e1c23872e655d2bee448ecafb8c25d71709c8d80856edeb1af1725c161f51c4838ba3bd1f4acfad12454ffcebb7184bb6b9ea740b7' \n",
+        "      authorization = 'xxxxxxx'\n",
+        " \n",
         "      #Here Paste your CSRF Token\n",
-        "      csrf_token = 'c7ae7274dc75e5a6f63f05e0b0eceedd1a34cb868dcda39046cce5e1c23872e655d2bee448ecafb8c25d71709c8d80856edeb1af1725c161f51c4838ba3bd1f4acfad12454ffcebb7184bb6b9ea740b7'\n",
+        "      csrf_token = 'xxxxxxx'\n",
         "\n",
-        "      #Check Documentation to find out how to get his values.\n",
         "\n",
         "      #Extracts the Information from the API Repsonse  & Store it in followers.txt & following.txt\n",
         "      def infoExtractor(JSONpayload, index, typeRequest,arr):\n",
@@ -566,13 +562,13 @@
         "              \"x-csrf-token\": csrf_token,\n",
         "              \"x-twitter-auth-type\": \"OAuth2Session\",\n",
         "              \"x-twitter-active-user\": \"yes\",\n",
-        "              \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.72 Safari/537.36 Edg/89.0.774.45\",\n",
+        "              \"user-agent\": \"xxxxxxx\",\n",
         "              \"content-type\": \"application/json\",\n",
         "              \"accept\": \"*/*\",\n",
         "              \"sec-fetch-site\": \"same-origin\",\n",
         "              \"sec-fetch-mode\": \"cors\",\n",
         "              \"sec-fetch-dest\": \"empty\",\n",
-        "              \"referer\": \"https://twitter.com/dlw_mlda/\"+option,\n",
+        "              \"referer\": \"xxxxxxx\"+option,\n",
         "              \"accept-language\": \"en-US,en;q=0.9\",\n",
         "              \"cookie\": cookie\n",
         "          }\n",
@@ -619,8 +615,8 @@
         "                  \"authorization\": authorization,\n",
         "                  \"x-twitter-client-language\": \"en\",\n",
         "                  \"x-csrf-token\": csrf_token,\n",
-        "                  \"x-guest-token\": \"1371160710940561409\",\n",
-        "                  \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.82 Safari/537.36 Edg/89.0.774.50\",\n",
+        "                  \"x-guest-token\": \"xxxxxxx\",\n",
+        "                  \"user-agent\": \"xxxxxxx\",\n",
         "                  \"content-type\": \"application/json\",\n",
         "                  \"accept-language\": \"en-US,en;q=0.9\",\n",
         "                  \"cookie\": cookie\n",
@@ -1214,11 +1210,11 @@
         "class Encoder:\n",
         "  def __init__(self):\n",
         "    # Pratham's API Keys (top secret)\n",
-        "    self.consumer_key = \"a8OXOJWynh9rdupWIz4u4yXiX\"\n",
-        "    self.consumer_secret = \"xxvtVPrNX9e3ht5tJGF5r8RzSJpUIDrE7nBFdNYi5huIxmLoac\"\n",
-        "    self.access_token_key = \"1437716485263093764-XgwefPBHn3W0pTToNrx9LpXDHaAixE\"\n",
-        "    self.access_token_secret = \"D7FVKXCEQ2ueCJC6oQSjwpAiLcrIqs2rmqjYfIoN4tcmq\"\n",
-        "    self.bearer_token = \"AAAAAAAAAAAAAAAAAAAAAP7nTgEAAAAAV2izN%2BsbYebB%2FC3HfrfrbX7JEeg%3DAckELjH4YxdSdenfhODgmILBB4HVU332D4lRTOwZo1zOfY39XH\"\n",
+        "    self.consumer_key = \"xxxxxxx\"\n",
+        "    self.consumer_secret = \"xxxxxxx\"\n",
+        "    self.access_token_key = \"xxxxxxx-xxxxxxx\"\n",
+        "    self.access_token_secret = \"xxxxxxx\"\n",
+        "    self.bearer_token = \"vxxxxxxx\"\n",
         "    auth = tweepy.OAuthHandler(self.consumer_key, self.consumer_secret)\n",
         "    auth.set_access_token(self.access_token_key, self.access_token_secret)\n",
         "    self.api = tweepy.API(auth, wait_on_rate_limit=True)\n",
@@ -27662,11 +27658,11 @@
         "import matplotlib.pyplot as plt\n",
         "import networkx as nx \n",
         "\n",
-        "consumer_key = 'a8OXOJWynh9rdupWIz4u4yXiX'\n",
-        "consumer_secret = 'xxvtVPrNX9e3ht5tJGF5r8RzSJpUIDrE7nBFdNYi5huIxmLoac'\n",
-        "access_token_key = '1437716485263093764-XgwefPBHn3W0pTToNrx9LpXDHaAixE'\n",
-        "access_token_secret = 'D7FVKXCEQ2ueCJC6oQSjwpAiLcrIqs2rmqjYfIoN4tcmq'\n",
-        "bearer_token = 'AAAAAAAAAAAAAAAAAAAAAP7nTgEAAAAAV2izN%2BsbYebB%2FC3HfrfrbX7JEeg%3DAckELjH4YxdSdenfhODgmILBB4HVU332D4lRTOwZo1zOfY39XH'\n",
+        "consumer_key = 'xxxxxxx'\n",
+        "consumer_secret = 'xxxxxxx'\n",
+        "access_token_key = 'xxxxxxx-xxxxxxx'\n",
+        "access_token_secret = 'xxxxxxx'\n",
+        "bearer_token = 'xxxxxxxxxxxxxx'\n",
         "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
         "auth.set_access_token(access_token_key, access_token_secret)\n",
         "api = tweepy.API(auth, wait_on_rate_limit=True)\n",
