--- a/Notebooks/GraphCombined.ipynb
+++ b/Notebooks/GraphCombined.ipynb
@@ -6,7 +6,7 @@
         "id": "GLk_F6pgopCg"
       },
       "source": [
-        "# Install and import libraries"
+        "# 0. Install and Import Libraries"
       ]
     },
     {
@@ -33,19 +33,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zqy9heZ7osLD"
-      },
-      "source": [
-        "# Classes"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "N09pbBaBumgJ"
       },
       "source": [
-        "## News Crawling"
+        "## 1. News Crawling\n",
+        "\n",
+        "There is a lot of code below but a broad overview of the process is,\n",
+        "\n",
+        "1. Crawl the article (input url) and enqueue the links it points to.\n",
+        "2. Build the propogation graph simultaneously. A BFS is performed.\n",
+        "\n",
+        "There are however some heuristics employed to work around the restriction provided by the free tier of the twitter API and also ensure the graph generation step is completed in a resonable amount of time (~2 mins)."
       ]
     },
     {
@@ -227,7 +225,9 @@
         "id": "r9Mzjwy4upRb"
       },
       "source": [
-        "## Graph"
+        "## 2. Construction the Graph\n",
+        "\n",
+        "A Graph class was created and the API credentials are stored as class variables (we are aware this is a security risk but proceeded due to time constraints). It has several funtions that were used to crawl the URLs and build the propagation network."
       ]
     },
     {
@@ -730,6 +730,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 2.5 Testing the Graph Generation\n",
+        "\n",
+        "We used a random URL and conducted basic sanity checks on the output."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -1138,6 +1147,20 @@
       ],
       "source": [
         "G,news_data = g.get_graph_of_news_url(news_url)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### WOW, it works beautifully!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 3. Encoding the News Articles"
       ]
     },
     {
@@ -27684,15 +27707,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0o3lFsdXsZhS"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "oVnO4dv_lMdr",
         "outputId": "682839d6-3e29-4d65-8935-e509a9feee72"
       },
@@ -27732,15 +27746,6 @@
         "    G_news,nodes = g.get_graph_of_tweet(i.id)\n",
         "    graphs.append(G_news)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2NgdQu0ulMds"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
